syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.jeeconf.grpcdemo";

package com.jeeconf.grpcdemo;

import "condition.proto";

service ConditionService {
    rpc GetCurrent (ConditionRequest) returns (ConditionResponse);
}